--- a/i3/config
+++ b/i3/config
@@ -1,81 +1,69 @@
 # i3 config file (v4)
+# i3blocks signals: 1 volume, 2 ethernet, 3 wifi
 
-# signals
-# 1    volume
-# 2    ethernet
-# 3    wifi
-
-# general configuration
+# variables
+    # display
+        set $monitor        HDMI-0
+        set $resolution     1920x1080
     # environment
-        set $mod                Mod4
-        set $locale             ie
-        set $terminal           alacritty
-    # screen
-        set $monitor            HDMI-0
-        set $resolution         1920x1080
-    # desktop
-        set $compositor         picom -f
-        set $notification_mgr   dunst
-        set $start_volume       40%
-        set $background         feh --bg-fill --randomize ~/Pictures/wallpapers/*
+        set $mod            Mod4
+        set $background     --randomize ~/Pictures/wallpapers/*
     # window appearance
-        set $window_title_format [%title]
-        set $window_border_pixel 1
-        set $window_title_font  Inconsolata Bold 11
-        set $start_gaps_inner   2
-        set $start_gaps_outer   1
-        set $floating_windows   Pavucontrol|Gnome-tweaks|Lxappearance|feh
+        set $font           Inconsolata Bold 11
+        set $title          [%title]
+        set $border_px      1
+    # window behaviour
+        set $float_class    Pavucontrol|Gnome-tweaks|Lxappearance
 
 # desktop
-    # rofi
-        bindsym $mod+d exec --no-startup-id rofi -show drun
-        bindsym $mod+Tab exec --no-startup-id rofi -show window
-    # xsession manager
-        bindsym $mod+l mode "$mode_xsession"
     # volume control
         bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && exec pkill -RTMIN+1 i3blocks
         bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && exec pkill -RTMIN+1 i3blocks
         bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && exec pkill -RTMIN+1 i3blocks
         bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && exec pkill -RTMIN+1 i3blocks
     # screenshots
-        bindsym $mod+Print exec --no-startup-id sh -c 'python ~/.config/scripts/tools/manage-screenshot.py --type full'
-        bindsym --release $mod+Shift+Print exec --no-startup-id sh -c 'python ~/.config/scripts/tools/manage-screenshot.py --type area'
+        bindsym Print exec --no-startup-id sh -c 'python ~/.config/scripts/tools/manage-screenshot.py --type full'
+        bindsym --release $mod+Print exec --no-startup-id sh -c 'python ~/.config/scripts/tools/manage-screenshot.py --type area'
     # apps
         bindsym $mod+Return exec i3-sensible-terminal
-        bindsym $mod+F1 exec --no-startup-id brave; workspace $ws2; focus
+        bindsym $mod+F1 exec --no-startup-id brave; workspace $ws1; focus
         bindsym $mod+F2 exec --no-startup-id vscodium; workspace $ws2; focus
         bindsym $mod+F3 exec --no-startup-id thunar
+    # rofi
+        bindsym $mod+d exec --no-startup-id rofi -show drun
+        bindsym $mod+Tab exec --no-startup-id rofi -show window
     # custom / scripts
         bindsym $mod+k exec --no-startup-id dunstctl history-pop
-        bindsym $mod+m exec --no-startup-id sh -c 'python ~/.config/scripts/rofi/manage-wifi.py'
-        bindsym $mod+x exec --no-startup-id sh -c 'python ~/.config/scripts/openai/gpt-chatbot-rofi.py'
-        bindsym $mod+i exec --no-startup-id redshift-gtk
+        bindsym $mod+m mode "$mode_menu"
+        bindsym $mod+l mode "$mode_session"
 
-# windows
+# containers
     # appearance
-        font pango:$window_title_font
-        for_window [class=".*"] title_format $window_title_format
-        for_window [class=".*"] border pixel $window_border_pixel
+        font pango:$font
+        for_window [class=".*"] title_format $title
+        for_window [class=".*"] border pixel $border_px
+        gaps inner 2
+        gaps outer 1
     # behaviour
-        floating_modifier $mod
+        smart_borders on
+        floating_modifier $mod+Shift
         focus_follows_mouse off
         tiling_drag modifier titlebar
-        popup_during_fullscreen smart
-        for_window [class=$floating_windows] floating enable
+        for_window [class=$float_class] floating enable, border pixel 0
+        for_window [window_type="dialog"] move absolute position center, border pixel 0
     # keybindings
         # management
             bindsym $mod+Shift+q kill
-            bindsym $mod+s mode "$mode_layout"
-            bindsym $mod+r mode "$mode_resize"
             bindsym $mod+f fullscreen toggle
             bindsym $mod+h split h
             bindsym $mod+v split v
-            bindsym --whole-window $mod+button2 kill
+            bindsym --whole-window $mod+button1 floating toggle
+            bindsym --whole-window $mod+button3 kill
         # resizing
-            #bindsym $mod+Ctrl+Right resize grow width 1 px or 1 ppt
-            #bindsym $mod+Ctrl+Up resize grow height 1 px or 1 ppt
-            #bindsym $mod+Ctrl+Down resize shrink height 1 px or 1 ppt
-            #bindsym $mod+Ctrl+Left resize shrink width 1 px or 1 ppt            
+            bindsym $mod+Ctrl+Up resize grow height 1 px or 1 ppt
+            bindsym $mod+Ctrl+Right resize grow width 1 px or 1 ppt
+            bindsym $mod+Ctrl+Down resize shrink height 1 px or 1 ppt
+            bindsym $mod+Ctrl+Left resize shrink width 1 px or 1 ppt
         # shift window focus
             bindsym $mod+Left focus left
             bindsym $mod+Down focus down
@@ -88,15 +76,15 @@
             bindsym $mod+Shift+Right move right
 
 # workspaces
-    # configuration
+    # labels
         set $ws0 "0:"
         set $ws1 "1:"
         set $ws2 "2:"
         set $ws3 "3:"
     # keybindings
         # switch to workspace
-            bindsym $mod+Control+Right workspace next
-            bindsym $mod+Control+Left workspace prev
+            bindsym $mod+minus workspace prev
+            bindsym $mod+equal workspace next
             bindsym $mod+0 workspace number $ws0
             bindsym $mod+1 workspace number $ws1
             bindsym $mod+2 workspace number $ws2
@@ -107,106 +95,117 @@
             bindsym $mod+Shift+2 move container to workspace number $ws2
             bindsym $mod+Shift+3 move container to workspace number $ws3
 
-# screen configuration
+# display configuration
     exec_always xrandr --output $monitor --mode $resolution
 
 # application rules
+    for_window [class=KeePass2|Gimp*] move to workspace $ws0
     for_window [class="Brave-browser"] move to workspace $ws1
     for_window [class="VSCodium"] move to workspace $ws2
     for_window [class="steam"] move to workspace $ws3
 
-# extras
-    gaps inner $start_gaps_inner
-    gaps outer $start_gaps_outer
-
 # launch
-    exec_always --no-startup-id $notification_mgr
-    exec_always --no-startup-id $compositor
-    exec_always --no-startup-id $background
-    exec_always --no-startup-id setxkbmap $locale
-    exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ $start_volume
+    exec_always --no-startup-id dunst
+    exec_always --no-startup-id picom -b
+    exec_always --no-startup-id feh --bg-fill $background
+    exec_always --no-startup-id setxkbmap ie
+    exec --no-startup-id redshift
+    exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 40%
 
 # statusbar
     bar {
         status_command i3blocks -c ~/.config/i3blocks/i3blocks.conf
-        font pango:$window_title_font
         position top
         height 30
+        tray_padding 5
         workspace_min_width 75
         separator_symbol " « "
         workspace_buttons yes
         strip_workspace_numbers yes
         colors {
-            background $black
-            statusline $lightgrey
-            separator $darkgrey
+            background          $black
+            statusline          $lightgrey
+            separator           $darkgrey
             # class             border backgr. text
             focused_workspace   $white $darkgrey $white
-            active_workspace    $white $black $white
             inactive_workspace  $darkgrey $black $lightgrey
-            urgent_workspace    $darkgreen $orange $darkgrey
+            urgent_workspace    $lightgrey $black $orange
+            binding_mode        $lightgrey $black $green
         }
     }
 
 # appearance
     # colors
-        set $black      #282c34
-        set $white      #ffffff
-        set $lightgrey  #a9a9a9
-        set $darkgrey   #4c566a
-        set $green      #00ff66
-        set $darkgreen  #149414
-        set $orange     #ff8c00
+        set $black              #282c34
+        set $white              #ffffff
+        set $lightgrey          #a9a9a9
+        set $darkgrey           #4c566a
+        set $green              #00ff66
+        set $darkgreen          #149414
+        set $orange             #ff8c00
     # windows
         # class                 border backgr. text indicator child_border
-        client.focused          $black $green $black $orange
-        client.focused_inactive $darkgrey $darkgrey $black
+        client.focused          $black $darkgrey $white $orange $green
+        client.focused_inactive $darkgrey $black $darkgrey
         client.unfocused        $black $black $darkgrey
-        client.urgent           $darkgreen $green $darkgrey
+        client.urgent           $black $black $orange
         client.placeholder      $black $black $darkgrey
         client.background       $black
 
-# modes 
-    # layout mode - switch between stacked/tabbed views
-        set $mode_layout Layout: stacking(s), tabbed(w), toggle split(e)
+# binding modes
+    # session mode - lock, reboot, etc. also reload or restart i3.
+        set $mode_session Session: lock(Return), suspend(s), reload i3(r), restart i3(c), logoff($mod+Ctrl+x), reboot($mod+Ctrl+r), poweroff($mod+Ctrl+s)
+        mode "$mode_session" {
+            bindsym Return      exec --no-startup-id i3lock -efti ~/Pictures/wallpapers/lockscreen.png, mode "default"
+            bindsym s           exec systemctl suspend, mode "default"
+            bindsym r           reload
+            bindsym c           restart
+            bindsym $mod+Ctrl+x exec i3-msg exit
+            bindsym $mod+Ctrl+r exec systemctl reboot
+            bindsym $mod+Ctrl+s exec systemctl poweroff
+            bindsym Escape      mode "default"
+        }
+
+    # tools menu mode
+        set $mode_menu Tools: containers(F1), wifi manager(F2), chatbot(F3)
+        mode "$mode_menu" {
+            bindsym F1      mode "$mode_containers"
+            bindsym F2      exec --no-startup-id sh -c 'python ~/.config/scripts/rofi/manage-wifi.py', mode "default"
+            bindsym F3      exec --no-startup-id sh -c 'python ~/.config/scripts/openai/gpt-chatbot-rofi.py', mode "default"
+            bindsym Return  mode "$mode_menu"
+            bindsym Escape  mode "default"
+        }
+
+    # container display mode - enter resize or gaps manual modes
+        set $mode_containers Containers: layout(F1), resize(F2), gaps(F3)
+        mode "$mode_containers" {
+            bindsym F1      mode "$mode_layout"
+            bindsym F2      mode "$mode_resize"
+            bindsym F3      mode "$mode_gaps"
+            bindsym Return  mode "$mode_containers"
+            bindsym Escape  mode "default"
+        }
+
+    # layout mode - switch between stacked/tabbed containers
+        set $mode_layout Layout: split(F1), stacking(F2), tabbed(F3), cycle(F4)
         mode "$mode_layout" {
-            bindsym s       layout stacking
-            bindsym w       layout tabbed
-            bindsym e       layout toggle split
+            bindsym F1      layout toggle split
+            bindsym F2      layout stacking
+            bindsym F3      layout tabbed
+            bindsym F4      layout toggle
             bindsym Return  mode "default"
-            bindsym Escape  mode "default"
-        }
-
-    # session mode - lock, logoff, reboot, etc. also reload or restart i3.
-        set $mode_xsession Xsession: lock(Return), suspend(s), hibernate($mod+Ctrl+h), reload i3(r), restart i3(c), logoff($mod+Ctrl+x), reboot($mod+Ctrl+r), poweroff($mod+Ctrl+s)
-        mode "$mode_xsession" {
-            bindsym Return          exec --no-startup-id i3lock -efi ~/Pictures/wallpapers/arch_pixel_dark.png, mode "default"
-            bindsym s               exec systemctl suspend, mode "default"
-            bindsym $mod+Ctrl+h     exec systemctl hibernate, mode "default"
-            bindsym r               reload
-            bindsym c               restart
-            bindsym $mod+Ctrl+x     exec i3-msg exit
-            bindsym $mod+Ctrl+r     exec systemctl reboot
-            bindsym $mod+Ctrl+s     exec systemctl poweroff
-            bindsym Escape          mode "default"
-        }
-
-    # window mode - enter resize or gaps manual modes
-        set $mode_resize Window: resize(r), gaps(g)
-        mode "$mode_resize" {
-            bindsym r       mode "resize"
-            bindsym g       mode "$mode_gaps"
-            bindsym Escape  mode "default"
+            bindsym Escape  mode "$mode_containers"
         }
 
     # resize mode
-        mode "resize" {
-            bindsym Left resize shrink width 10 px or 10 ppt
-            bindsym Down resize grow height 10 px or 10 ppt
-            bindsym Up resize shrink height 10 px or 10 ppt
-            bindsym Right resize grow width 10 px or 10 ppt
-            bindsym Return mode "default"
-            bindsym Escape mode "default"
+    set $mode_resize Resize: use arrow keys
+        mode "$mode_resize" {
+            bindsym Up      resize grow height 10 px or 10 ppt
+            bindsym Right   resize grow width 10 px or 10 ppt
+            bindsym Down    resize shrink height 10 px or 10 ppt
+            bindsym Left    resize shrink width 10 px or 10 ppt
+            bindsym Return  mode "default"
+            bindsym Escape  mode "$mode_containers"
         }
 
     # gaps mode
@@ -229,8 +228,8 @@
             bindsym r      mode "$mode_gaps_right"
             bindsym b      mode "$mode_gaps_bottom"
             bindsym l      mode "$mode_gaps_left"
-            bindsym Return mode "$mode_gaps"
-            bindsym Escape mode "default"
+            bindsym Return mode "default"
+            bindsym Escape mode "$mode_containers"
         }
         mode "$mode_gaps_outer" {
             bindsym plus  gaps outer current plus 5
