--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -5,7 +5,7 @@
     "editor.cursorBlinking": "smooth",
     "editor.cursorSmoothCaretAnimation": "on",
     "editor.detectIndentation": false,
-    "editor.fontFamily": "'Monaco', monospace",
+    "editor.fontFamily": "'Monaco', monospace, 'Font Awesome 6 Brands', 'Font Awesome 6 Free Solid'",
     "editor.fontSize": 12,
     "editor.fontWeight": "normal",
     "editor.fontLigatures": true,
@@ -29,7 +29,7 @@
     "editor.wordSeparators": "`~!@#$%^&*()-=+[{]}\\|;:'\",.<>/?",
     "git.confirmSync": false,
     "security.workspace.trust.untrustedFiles": "open",
-    "terminal.integrated.fontFamily": "'JetBrains Mono', monospace",
+    "terminal.integrated.fontFamily": "'JetBrains Mono', monospace, 'Font Awesome 6 Brands', 'Font Awesome 6 Free Solid'",
     "terminal.integrated.fontSize": 12,
     "workbench.colorTheme": "Monokai Dimmed",
     "window.menuBarVisibility": "toggle",
