--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -85,7 +85,7 @@ fade-out-step = 0.03
 #################################
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 0.95
+inactive-opacity = 0.98
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 frame-opacity = 0.1
@@ -95,10 +95,10 @@ frame-opacity = 0.1
 inactive-opacity-override = true
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.95
+active-opacity = 0.99
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-inactive-dim = 0.0
+inactive-dim = 0
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
@@ -114,7 +114,8 @@ inactive-dim = 0.0
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-# opacity-rule = ["98:class_g = 'Alacritty'"]
+
+opacity-rule = [ "50:class_g = 'notif-overlay'" ]
 
 #################################
 #           Corners             #
@@ -138,9 +139,9 @@ rounded-corners-exclude = [
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur-method = "dual_kawase"
-blur-size = 0
+blur-size = 1
 blur-deviation = false
-blur-strength = 5
+blur-strength = 2
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
