--- a/i3/config
+++ b/i3/config
@@ -16,6 +16,9 @@
         set $float_class    Pavucontrol|Gnome-tweaks|Lxappearance
 
 # desktop
+    # rofi
+        bindsym $mod+d exec --no-startup-id rofi -show drun -fuzzy
+        bindsym $mod+Tab exec --no-startup-id rofi -show combi -modes combi -combi-modes window#ssh
     # volume control
         bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && exec pkill -RTMIN+1 i3blocks
         bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && exec pkill -RTMIN+1 i3blocks
@@ -26,15 +29,12 @@
         bindsym --release $mod+Print exec --no-startup-id sh -c 'python ~/.config/scripts/tools/manage-screenshot.py --type area'
     # apps
         bindsym $mod+Return exec i3-sensible-terminal
-        bindsym $mod+F1 exec --no-startup-id brave; workspace $ws1; focus
-        bindsym $mod+F2 exec --no-startup-id vscodium; workspace $ws2; focus
-        bindsym $mod+F3 exec --no-startup-id thunar
-    # rofi
-        bindsym $mod+d exec --no-startup-id rofi -show drun
-        bindsym $mod+Tab exec --no-startup-id rofi -show window
+        bindsym $mod+mod2+KP_1 exec --no-startup-id brave; workspace $ws1; focus
+        bindsym $mod+mod2+KP_2 exec --no-startup-id vscodium; workspace $ws2; focus
+        bindsym $mod+mod2+KP_3 exec --no-startup-id thunar
     # custom / scripts
-        bindsym $mod+k exec --no-startup-id dunstctl history-pop
-        bindsym $mod+m mode "$mode_menu"
+        bindsym $mod+space exec --no-startup-id dunstctl history-pop
+        bindsym $mod+mod2+KP_0 mode "$mode_menu"
         bindsym $mod+l mode "$mode_session"
 
 # containers
@@ -46,7 +46,7 @@
         gaps outer 1
     # behaviour
         smart_borders on
-        floating_modifier $mod+Shift
+        floating_modifier $mod
         focus_follows_mouse off
         tiling_drag modifier titlebar
         for_window [class=$float_class] floating enable, border pixel 0
@@ -57,8 +57,7 @@
             bindsym $mod+f fullscreen toggle
             bindsym $mod+h split h
             bindsym $mod+v split v
-            bindsym --whole-window $mod+button1 floating toggle
-            bindsym --whole-window $mod+button3 kill
+            bindsym --whole-window $mod+button3 floating toggle
         # resizing
             bindsym $mod+Ctrl+Up resize grow height 1 px or 1 ppt
             bindsym $mod+Ctrl+Right resize grow width 1 px or 1 ppt
@@ -83,8 +82,8 @@
         set $ws3 "3:"
     # keybindings
         # switch to workspace
-            bindsym $mod+minus workspace prev
-            bindsym $mod+equal workspace next
+            bindsym $mod+comma workspace prev
+            bindsym $mod+period workspace next
             bindsym $mod+0 workspace number $ws0
             bindsym $mod+1 workspace number $ws1
             bindsym $mod+2 workspace number $ws2
@@ -105,10 +104,10 @@
     for_window [class="steam"] move to workspace $ws3
 
 # launch
-    exec_always --no-startup-id dunst
-    exec_always --no-startup-id picom -b
+    exec --no-startup-id dunst
+    exec --no-startup-id picom -b
     exec_always --no-startup-id feh --bg-fill $background
-    exec_always --no-startup-id setxkbmap ie
+    exec --no-startup-id setxkbmap ie
     exec --no-startup-id redshift
     exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 40%
 
@@ -129,8 +128,8 @@
             # class             border backgr. text
             focused_workspace   $white $darkgrey $white
             inactive_workspace  $darkgrey $black $lightgrey
-            urgent_workspace    $lightgrey $black $orange
-            binding_mode        $lightgrey $black $green
+            urgent_workspace    $lightgrey $green $darkgreen
+            binding_mode        $black $black $green
         }
     }
 
@@ -140,15 +139,15 @@
         set $white              #ffffff
         set $lightgrey          #a9a9a9
         set $darkgrey           #4c566a
-        set $green              #00ff66
+        set $green              #8ae234
         set $darkgreen          #149414
         set $orange             #ff8c00
     # windows
         # class                 border backgr. text indicator child_border
-        client.focused          $black $darkgrey $white $orange $green
+        client.focused          $darkgrey $black $lightgrey $orange $green
         client.focused_inactive $darkgrey $black $darkgrey
         client.unfocused        $black $black $darkgrey
-        client.urgent           $black $black $orange
+        client.urgent           $darkgreen $green $darkgreen
         client.placeholder      $black $black $darkgrey
         client.background       $black
 
@@ -167,38 +166,38 @@
         }
 
     # tools menu mode
-        set $mode_menu Tools: containers(F1), wifi manager(F2), chatbot(F3)
+        set $mode_menu [NUMPAD] containers(1), wifi manager(2), chatbot(3)
         mode "$mode_menu" {
-            bindsym F1      mode "$mode_containers"
-            bindsym F2      exec --no-startup-id sh -c 'python ~/.config/scripts/rofi/manage-wifi.py', mode "default"
-            bindsym F3      exec --no-startup-id sh -c 'python ~/.config/scripts/openai/gpt-chatbot-rofi.py', mode "default"
+            bindsym mod2+KP_1      mode "$mode_containers"
+            bindsym mod2+KP_2      exec --no-startup-id sh -c '/home/mishi/.config/scripts/tools/connect-wifi.sh', mode "default"
+            bindsym mod2+KP_3      exec --no-startup-id sh -c 'python ~/.config/scripts/openai/gpt-chatbot-rofi.py', mode "default"
             bindsym Return  mode "$mode_menu"
             bindsym Escape  mode "default"
         }
 
     # container display mode - enter resize or gaps manual modes
-        set $mode_containers Containers: layout(F1), resize(F2), gaps(F3)
+        set $mode_containers [containers] layout(1), resize(2), gaps(3)
         mode "$mode_containers" {
-            bindsym F1      mode "$mode_layout"
-            bindsym F2      mode "$mode_resize"
-            bindsym F3      mode "$mode_gaps"
+            bindsym mod2+KP_1   mode "$mode_layout"
+            bindsym mod2+KP_2   mode "$mode_resize"
+            bindsym mod2+KP_3   mode "$mode_gaps"
             bindsym Return  mode "$mode_containers"
             bindsym Escape  mode "default"
         }
 
     # layout mode - switch between stacked/tabbed containers
-        set $mode_layout Layout: split(F1), stacking(F2), tabbed(F3), cycle(F4)
+        set $mode_layout [layout] cycle(0), split(1), stacked(2), tabbed(3)
         mode "$mode_layout" {
-            bindsym F1      layout toggle split
-            bindsym F2      layout stacking
-            bindsym F3      layout tabbed
-            bindsym F4      layout toggle
+            bindsym mod2+KP_0   layout toggle
+            bindsym mod2+KP_1   layout toggle split
+            bindsym mod2+KP_2   layout stacking
+            bindsym mod2+KP_3   layout tabbed
             bindsym Return  mode "default"
             bindsym Escape  mode "$mode_containers"
         }
 
     # resize mode
-    set $mode_resize Resize: use arrow keys
+    set $mode_resize [resize]    
         mode "$mode_resize" {
             bindsym Up      resize grow height 10 px or 10 ppt
             bindsym Right   resize grow width 10 px or 10 ppt
@@ -209,7 +208,7 @@
         }
 
     # gaps mode
-        set $mode_gaps Gaps: (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
+        set $mode_gaps [gaps] (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
         set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
         set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
         set $mode_gaps_horiz Horizontal Gaps: +|-|0 (local), Shift + +|-|0 (global)
