--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -100,62 +100,26 @@ window:
   # the default theme variant.
   #decorations_theme_variant: None
 
-#scrolling:
-  # Maximum number of lines in the scrollback buffer.
+scrolling:
   # Specifying '0' will disable scrolling.
-  #history: 10000
-
-  # Scrolling distance multiplier.
-  #multiplier: 3
+   history: 10000
+   multiplier: 5
 
 # Font configuration
 font:
-  # Normal (roman) font face
   normal:
-    # Font family
-    #
-    # Default:
-    #   - (macOS) Menlo
-    #   - (Linux/BSD) monospace
-    #   - (Windows) Consolas
+    Default:
     family: JetBrains Mono
-    # The `style` can be specified to pick a specific face.
     style: Regular
-
-  # Bold font face
   bold:
-    # Font family
-    #
-    # If the bold family is not specified, it will fall back to the
-    # value specified for the normal font.
-    family: JetBrains mono
-
-    # The `style` can be specified to pick a specific face.
+    family: JetBrains Mono
     style: Bold
-
-  # Italic font face
   italic:
-    # Font family
-    #
-    # If the italic family is not specified, it will fall back to the
-    # value specified for the normal font.
     family: JetBrains Mono
-
-    # The `style` can be specified to pick a specific face.
     style: Italic
-
-  # Bold italic font face
-  #bold_italic:
-    # Font family
-    #
-    # If the bold italic family is not specified, it will fall back to the
-    # value specified for the normal font.
+  bold_italic:
     family: JetBrains Mono
-    
-    # The `style` can be specified to pick a specific face.
     style: Bold Italic
-
-  # Point size
   size: 9.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
@@ -186,8 +150,8 @@ font:
 colors:
   # Default colors
   primary:
-    background: '#1d1f21'
-    foreground: '#c5c8c6'
+    background: '#282c34'
+    foreground: '#a9a9a9'
 
     # Bright and dim foreground colors
     #
