--- a/i3/config
+++ b/i3/config
@@ -8,6 +8,7 @@
     # environment
         set $mod            Mod4
         set $background     --randomize ~/Pictures/wallpapers/*
+        set $lockscreen     ~/Pictures/wallpapers/lockscreen.png
     # window appearance
         set $font           Inconsolata Bold 11
         set $title          [%title]
@@ -17,7 +18,7 @@
 
 # desktop
     # rofi
-        bindsym $mod+d exec --no-startup-id rofi -show drun -fuzzy
+        bindsym $mod+d exec --no-startup-id rofi -show drun
         bindsym $mod+Tab exec --no-startup-id rofi -show combi -modes combi -combi-modes window#ssh
     # volume control
         bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && exec pkill -RTMIN+1 i3blocks
@@ -25,8 +26,8 @@
         bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && exec pkill -RTMIN+1 i3blocks
         bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && exec pkill -RTMIN+1 i3blocks
     # screenshots
-        bindsym Print exec --no-startup-id sh -c 'python ~/.config/scripts/tools/manage-screenshot.py --type full'
-        bindsym --release $mod+Print exec --no-startup-id sh -c 'python ~/.config/scripts/tools/manage-screenshot.py --type area'
+        bindsym --release Print exec --no-startup-id sh -c '~/.config/scripts/tools/screenshot.sh -option "copy area"'
+        bindsym $mod+Print exec --no-startup-id sh -c '~/.config/scripts/tools/screenshot.sh'
     # apps
         bindsym $mod+Return exec i3-sensible-terminal
         bindsym $mod+mod2+KP_1 exec --no-startup-id brave; workspace $ws1; focus
@@ -111,28 +112,6 @@
     exec --no-startup-id redshift
     exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 40%
 
-# statusbar
-    bar {
-        status_command i3blocks -c ~/.config/i3blocks/i3blocks.conf
-        position top
-        height 30
-        tray_padding 5
-        workspace_min_width 75
-        separator_symbol " « "
-        workspace_buttons yes
-        strip_workspace_numbers yes
-        colors {
-            background          $black
-            statusline          $lightgrey
-            separator           $darkgrey
-            # class             border backgr. text
-            focused_workspace   $white $darkgrey $white
-            inactive_workspace  $darkgrey $black $lightgrey
-            urgent_workspace    $lightgrey $green $darkgreen
-            binding_mode        $black $black $green
-        }
-    }
-
 # appearance
     # colors
         set $black              #282c34
@@ -143,20 +122,42 @@
         set $darkgreen          #149414
         set $orange             #ff8c00
     # windows
-        # class                 border backgr. text indicator child_border
-        client.focused          $darkgrey $black $lightgrey $orange $green
-        client.focused_inactive $darkgrey $black $darkgrey
-        client.unfocused        $black $black $darkgrey
-        client.urgent           $darkgreen $green $darkgreen
-        client.placeholder      $black $black $darkgrey
+        # class                 border      backgr.     text        indicator   child_border
+        client.focused          $darkgrey   $black      $lightgrey  $orange     $green
+        client.focused_inactive $darkgrey   $black      $darkgrey
+        client.unfocused        $black      $black      $darkgrey
+        client.urgent           $darkgreen  $green      $darkgreen
+        client.placeholder      $black      $black      $darkgrey
         client.background       $black
+        
+# statusbar
+    bar {
+        status_command          i3blocks -c ~/.config/i3blocks/i3blocks.conf
+        position                top
+        height                  30
+        tray_padding            5
+        workspace_min_width     75
+        separator_symbol        " « "
+        workspace_buttons       yes
+        strip_workspace_numbers yes
+        colors {
+            background          $black
+            statusline          $lightgrey
+            separator           $darkgrey
+            # class             border      backgr.     text
+            focused_workspace   $white      $darkgrey   $white
+            inactive_workspace  $darkgrey   $black      $lightgrey
+            urgent_workspace    $lightgrey  $green      $darkgreen
+            binding_mode        $black      $black      $green
+        }
+    }
 
 # binding modes
     # session mode - lock, reboot, etc. also reload or restart i3.
-        set $mode_session Session: lock(Return), suspend(s), reload i3(r), restart i3(c), logoff($mod+Ctrl+x), reboot($mod+Ctrl+r), poweroff($mod+Ctrl+s)
+        set $mode_session session: lock(Return), suspend(s), reload i3(r), restart i3(c), logoff($mod+Ctrl+x), reboot($mod+Ctrl+r), poweroff($mod+Ctrl+s)
         mode "$mode_session" {
-            bindsym Return      exec --no-startup-id i3lock -efti ~/Pictures/wallpapers/lockscreen.png, mode "default"
-            bindsym s           exec systemctl suspend, mode "default"
+            bindsym Return      exec --no-startup-id i3lock -efti $lockscreen, mode "default"
+            bindsym s           exec i3lock -efti $lockscreen && exec systemctl suspend, mode "default"
             bindsym r           reload
             bindsym c           restart
             bindsym $mod+Ctrl+x exec i3-msg exit
@@ -168,11 +169,11 @@
     # tools menu mode
         set $mode_menu [NUMPAD] containers(1), wifi manager(2), chatbot(3)
         mode "$mode_menu" {
-            bindsym mod2+KP_1      mode "$mode_containers"
-            bindsym mod2+KP_2      exec --no-startup-id sh -c '/home/mishi/.config/scripts/tools/connect-wifi.sh', mode "default"
-            bindsym mod2+KP_3      exec --no-startup-id sh -c 'python ~/.config/scripts/openai/gpt-chatbot-rofi.py', mode "default"
-            bindsym Return  mode "$mode_menu"
-            bindsym Escape  mode "default"
+            bindsym mod2+KP_1   mode "$mode_containers"
+            bindsym mod2+KP_2   exec --no-startup-id sh -c '~/.config/scripts/tools/connect-wifi.sh', mode "default"
+            bindsym mod2+KP_3   exec --no-startup-id sh -c 'python ~/.config/scripts/openai/gpt-chatbot-rofi.py', mode "default"
+            bindsym Return      mode "$mode_menu"
+            bindsym Escape      mode "default"
         }
 
     # container display mode - enter resize or gaps manual modes
@@ -181,148 +182,148 @@
             bindsym mod2+KP_1   mode "$mode_layout"
             bindsym mod2+KP_2   mode "$mode_resize"
             bindsym mod2+KP_3   mode "$mode_gaps"
-            bindsym Return  mode "$mode_containers"
-            bindsym Escape  mode "default"
+            bindsym Return      mode "$mode_containers"
+            bindsym Escape      mode "default"
         }
 
-    # layout mode - switch between stacked/tabbed containers
-        set $mode_layout [layout] cycle(0), split(1), stacked(2), tabbed(3)
-        mode "$mode_layout" {
-            bindsym mod2+KP_0   layout toggle
-            bindsym mod2+KP_1   layout toggle split
-            bindsym mod2+KP_2   layout stacking
-            bindsym mod2+KP_3   layout tabbed
-            bindsym Return  mode "default"
-            bindsym Escape  mode "$mode_containers"
-        }
+        # layout mode - switch between stacked/tabbed containers
+            set $mode_layout [layout] cycle(0), split(1), stacked(2), tabbed(3)
+            mode "$mode_layout" {
+                bindsym mod2+KP_0   layout toggle
+                bindsym mod2+KP_1   layout toggle split
+                bindsym mod2+KP_2   layout stacking
+                bindsym mod2+KP_3   layout tabbed
+                bindsym Return      mode "default"
+                bindsym Escape      mode "$mode_containers"
+            }
 
-    # resize mode
-    set $mode_resize [resize]    
-        mode "$mode_resize" {
-            bindsym Up      resize grow height 10 px or 10 ppt
-            bindsym Right   resize grow width 10 px or 10 ppt
-            bindsym Down    resize shrink height 10 px or 10 ppt
-            bindsym Left    resize shrink width 10 px or 10 ppt
-            bindsym Return  mode "default"
-            bindsym Escape  mode "$mode_containers"
-        }
+        # resize mode
+            set $mode_resize [resize]    
+            mode "$mode_resize" {
+                bindsym Up      resize grow height 10 px or 10 ppt
+                bindsym Right   resize grow width 10 px or 10 ppt
+                bindsym Down    resize shrink height 10 px or 10 ppt
+                bindsym Left    resize shrink width 10 px or 10 ppt
+                bindsym Return  mode "default"
+                bindsym Escape  mode "$mode_containers"
+            }
 
-    # gaps mode
-        set $mode_gaps [gaps] (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
-        set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
-        set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
-        set $mode_gaps_horiz Horizontal Gaps: +|-|0 (local), Shift + +|-|0 (global)
-        set $mode_gaps_verti Vertical Gaps: +|-|0 (local), Shift + +|-|0 (global)
-        set $mode_gaps_top Top Gaps: +|-|0 (local), Shift + +|-|0 (global)
-        set $mode_gaps_right Right Gaps: +|-|0 (local), Shift + +|-|0 (global)
-        set $mode_gaps_bottom Bottom Gaps: +|-|0 (local), Shift + +|-|0 (global)
-        set $mode_gaps_left Left Gaps: +|-|0 (local), Shift + +|-|0 (global)
+        # gaps mode
+            set $mode_gaps [gaps] (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
+            set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
+            set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+            set $mode_gaps_horiz Horizontal Gaps: +|-|0 (local), Shift + +|-|0 (global)
+            set $mode_gaps_verti Vertical Gaps: +|-|0 (local), Shift + +|-|0 (global)
+            set $mode_gaps_top Top Gaps: +|-|0 (local), Shift + +|-|0 (global)
+            set $mode_gaps_right Right Gaps: +|-|0 (local), Shift + +|-|0 (global)
+            set $mode_gaps_bottom Bottom Gaps: +|-|0 (local), Shift + +|-|0 (global)
+            set $mode_gaps_left Left Gaps: +|-|0 (local), Shift + +|-|0 (global)
 
-        mode "$mode_gaps" {
-            bindsym o      mode "$mode_gaps_outer"
-            bindsym i      mode "$mode_gaps_inner"
-            bindsym h      mode "$mode_gaps_horiz"
-            bindsym v      mode "$mode_gaps_verti"
-            bindsym t      mode "$mode_gaps_top"
-            bindsym r      mode "$mode_gaps_right"
-            bindsym b      mode "$mode_gaps_bottom"
-            bindsym l      mode "$mode_gaps_left"
-            bindsym Return mode "default"
-            bindsym Escape mode "$mode_containers"
-        }
-        mode "$mode_gaps_outer" {
-            bindsym plus  gaps outer current plus 5
-            bindsym minus gaps outer current minus 5
-            bindsym 0     gaps outer current set 0
+            mode "$mode_gaps" {
+                bindsym o      mode "$mode_gaps_outer"
+                bindsym i      mode "$mode_gaps_inner"
+                bindsym h      mode "$mode_gaps_horiz"
+                bindsym v      mode "$mode_gaps_verti"
+                bindsym t      mode "$mode_gaps_top"
+                bindsym r      mode "$mode_gaps_right"
+                bindsym b      mode "$mode_gaps_bottom"
+                bindsym l      mode "$mode_gaps_left"
+                bindsym Return mode "default"
+                bindsym Escape mode "$mode_containers"
+            }
+            mode "$mode_gaps_outer" {
+                bindsym plus  gaps outer current plus 5
+                bindsym minus gaps outer current minus 5
+                bindsym 0     gaps outer current set 0
 
-            bindsym Shift+plus  gaps outer all plus 5
-            bindsym Shift+minus gaps outer all minus 5
-            bindsym Shift+0     gaps outer all set 0
+                bindsym Shift+plus  gaps outer all plus 5
+                bindsym Shift+minus gaps outer all minus 5
+                bindsym Shift+0     gaps outer all set 0
 
-            bindsym Return mode "$mode_gaps"
-            bindsym Escape mode "default"
-        }
-        mode "$mode_gaps_inner" {
-            bindsym plus  gaps inner current plus 5
-            bindsym minus gaps inner current minus 5
-            bindsym 0     gaps inner current set 0
+                bindsym Return mode "$mode_gaps"
+                bindsym Escape mode "default"
+            }
+            mode "$mode_gaps_inner" {
+                bindsym plus  gaps inner current plus 5
+                bindsym minus gaps inner current minus 5
+                bindsym 0     gaps inner current set 0
 
-            bindsym Shift+plus  gaps inner all plus 5
-            bindsym Shift+minus gaps inner all minus 5
-            bindsym Shift+0     gaps inner all set 0
+                bindsym Shift+plus  gaps inner all plus 5
+                bindsym Shift+minus gaps inner all minus 5
+                bindsym Shift+0     gaps inner all set 0
 
-            bindsym Return mode "$mode_gaps"
-            bindsym Escape mode "default"
-        }
-        mode "$mode_gaps_horiz" {
-            bindsym plus  gaps horizontal current plus 5
-            bindsym minus gaps horizontal current minus 5
-            bindsym 0     gaps horizontal current set 0
+                bindsym Return mode "$mode_gaps"
+                bindsym Escape mode "default"
+            }
+            mode "$mode_gaps_horiz" {
+                bindsym plus  gaps horizontal current plus 5
+                bindsym minus gaps horizontal current minus 5
+                bindsym 0     gaps horizontal current set 0
 
-            bindsym Shift+plus  gaps horizontal all plus 5
-            bindsym Shift+minus gaps horizontal all minus 5
-            bindsym Shift+0     gaps horizontal all set 0
+                bindsym Shift+plus  gaps horizontal all plus 5
+                bindsym Shift+minus gaps horizontal all minus 5
+                bindsym Shift+0     gaps horizontal all set 0
 
-            bindsym Return mode "$mode_gaps"
-            bindsym Escape mode "default"
-        }
-        mode "$mode_gaps_verti" {
-            bindsym plus  gaps vertical current plus 5
-            bindsym minus gaps vertical current minus 5
-            bindsym 0     gaps vertical current set 0
+                bindsym Return mode "$mode_gaps"
+                bindsym Escape mode "default"
+            }
+            mode "$mode_gaps_verti" {
+                bindsym plus  gaps vertical current plus 5
+                bindsym minus gaps vertical current minus 5
+                bindsym 0     gaps vertical current set 0
 
-            bindsym Shift+plus  gaps vertical all plus 5
-            bindsym Shift+minus gaps vertical all minus 5
-            bindsym Shift+0     gaps vertical all set 0
+                bindsym Shift+plus  gaps vertical all plus 5
+                bindsym Shift+minus gaps vertical all minus 5
+                bindsym Shift+0     gaps vertical all set 0
 
-            bindsym Return mode "$mode_gaps"
-            bindsym Escape mode "default"
-        }
-        mode "$mode_gaps_top" {
-            bindsym plus  gaps top current plus 5
-            bindsym minus gaps top current minus 5
-            bindsym 0     gaps top current set 0
+                bindsym Return mode "$mode_gaps"
+                bindsym Escape mode "default"
+            }
+            mode "$mode_gaps_top" {
+                bindsym plus  gaps top current plus 5
+                bindsym minus gaps top current minus 5
+                bindsym 0     gaps top current set 0
 
-            bindsym Shift+plus  gaps top all plus 5
-            bindsym Shift+minus gaps top all minus 5
-            bindsym Shift+0     gaps top all set 0
+                bindsym Shift+plus  gaps top all plus 5
+                bindsym Shift+minus gaps top all minus 5
+                bindsym Shift+0     gaps top all set 0
 
-            bindsym Return mode "$mode_gaps"
-            bindsym Escape mode "default"
-        }
-        mode "$mode_gaps_right" {
-            bindsym plus  gaps right current plus 5
-            bindsym minus gaps right current minus 5
-            bindsym 0     gaps right current set 0
+                bindsym Return mode "$mode_gaps"
+                bindsym Escape mode "default"
+            }
+            mode "$mode_gaps_right" {
+                bindsym plus  gaps right current plus 5
+                bindsym minus gaps right current minus 5
+                bindsym 0     gaps right current set 0
 
-            bindsym Shift+plus  gaps right all plus 5
-            bindsym Shift+minus gaps right all minus 5
-            bindsym Shift+0     gaps right all set 0
+                bindsym Shift+plus  gaps right all plus 5
+                bindsym Shift+minus gaps right all minus 5
+                bindsym Shift+0     gaps right all set 0
 
-            bindsym Return mode "$mode_gaps"
-            bindsym Escape mode "default"
-        }
-        mode "$mode_gaps_bottom" {
-            bindsym plus  gaps bottom current plus 5
-            bindsym minus gaps bottom current minus 5
-            bindsym 0     gaps bottom current set 0
+                bindsym Return mode "$mode_gaps"
+                bindsym Escape mode "default"
+            }
+            mode "$mode_gaps_bottom" {
+                bindsym plus  gaps bottom current plus 5
+                bindsym minus gaps bottom current minus 5
+                bindsym 0     gaps bottom current set 0
 
-            bindsym Shift+plus  gaps bottom all plus 5
-            bindsym Shift+minus gaps bottom all minus 5
-            bindsym Shift+0     gaps bottom all set 0
+                bindsym Shift+plus  gaps bottom all plus 5
+                bindsym Shift+minus gaps bottom all minus 5
+                bindsym Shift+0     gaps bottom all set 0
 
-            bindsym Return mode "$mode_gaps"
-            bindsym Escape mode "default"
-        }
-        mode "$mode_gaps_left" {
-            bindsym plus  gaps left current plus 5
-            bindsym minus gaps left current minus 5
-            bindsym 0     gaps left current set 0
+                bindsym Return mode "$mode_gaps"
+                bindsym Escape mode "default"
+            }
+            mode "$mode_gaps_left" {
+                bindsym plus  gaps left current plus 5
+                bindsym minus gaps left current minus 5
+                bindsym 0     gaps left current set 0
 
-            bindsym Shift+plus  gaps left all plus 5
-            bindsym Shift+minus gaps left all minus 5
-            bindsym Shift+0     gaps left all set 0
+                bindsym Shift+plus  gaps left all plus 5
+                bindsym Shift+minus gaps left all minus 5
+                bindsym Shift+0     gaps left all set 0
 
-            bindsym Return mode "$mode_gaps"
-            bindsym Escape mode "default"
-        }
+                bindsym Return mode "$mode_gaps"
+                bindsym Escape mode "default"
+            }
