--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -29,8 +29,7 @@
     "editor.wordSeparators": "`~!@#$%^&*()-=+[{]}\\|;:'\",.<>/?",
     "git.confirmSync": false,
     "security.workspace.trust.untrustedFiles": "open",
-    "terminal.integrated.fontFamily": "'JetBrains Mono', monospace, 'Font Awesome 6 Brands', 'Font Awesome 6 Free Solid'",
-    "terminal.integrated.fontSize": 12,
+    "terminal.integrated.fontFamily": "'JetBrains Mono', monospace, 'Noto Color Emoji', 'Font Awesome 6 Brands', 'Font Awesome 6 Free Solid'",
     "workbench.colorTheme": "Monokai Dimmed",
     "window.menuBarVisibility": "toggle",
     "workbench.statusBar.visible": false,
@@ -39,5 +38,6 @@
     "workbench.colorCustomizations": {
     "tree.indentGuidesStroke": "#05ef3c",
     },
-    "editor.minimap.enabled": false
+    "editor.minimap.enabled": false,
+    "terminal.integrated.fontSize": 12
 }
