added fonts and theming

--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -1,46 +1,105 @@
 markup=pango
-separator=true
-separator_block_width=40
+separator=false
+separator_block_width=0
 border_top=1
 border_left=0
 border_right=0
 border_bottom=0
-align=right
+align=center
 
+#volume
+[left]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
 [volume]
+align=right
+background=#383c45
 command=~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 100 --critical 120
 interval=once
+min_width="---------"
 signal=1
-min_width="--------"
-border=#D0C3FF
+[microphone]
+background=#383c45
+command=echo "<span font='Font Awesome 6 Free Regular 10' color='#666666'></span>"
+interval=once
+min_width="----"
+[webcam]
+align=left
+background=#383c45
+command=echo "<span font='Font Awesome 6 Free Regular 10' color='#666666'></span>"
+interval=once
+min_width="----"
+[right]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
 
+#wifi
+[left]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
 [wifi]
+background=#383c45
 command=~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 40 --critical 20
 interval=30
+min_width="----------"
 signal=3
-min_width="--------"
-border=#A7D3FF
+[right]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
 
+#memory
+[left]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
 [memory]
+background=#383c45
 command=~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 70 --critical 90
 interval=30
-min_width="-------"
-border=#D0FFFA
+min_width="---------"
+[right]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
 
+#load
+[left]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
 [load]
+background=#383c45
 command=~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 0.7 --critical 1.0
 interval=30
-min_width="-------"
-border=#FFD4B9
+min_width="---------"
+[right]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
 
+# gpu
+[left]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
 [gpu]
+background=#383c45
 command=~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 70 --critical 80
 interval=30
-min_width="--------"
-border=#B8F7D9
+min_width="----------"
+[right]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
 
+# time
+[left]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
 [time]
-command=date +"%a%d %H:%M" | tr '[:lower:]' '[:upper:]'
+background=#383c45
+command=~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME
 interval=10
-min_width="------------"
-border=#C7D1E2
+min_width="-------------"
+[right]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
+
+[arch-logo]
+command=echo "<span font='Inconsolata Nerd Font 12' color='#ffffff'></span>"
+interval=once
+min_width="---"
