--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -85,7 +85,7 @@ fade-out-step = 0.03
 #################################
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 0.98
+inactive-opacity = 0.99
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 frame-opacity = 0.1
@@ -95,7 +95,7 @@ frame-opacity = 0.1
 inactive-opacity-override = true
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.99
+active-opacity = 0.98
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 inactive-dim = 0
@@ -115,7 +115,8 @@ inactive-dim = 0
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 
-opacity-rule = [ "60:class_g = 'notif-overlay'" ]
+opacity-rule = [ "100:class_g = 'Brave-browser'" ];
+opacity-rule = [ "50:class_g = 'notif-overlay'" ]
 
 #################################
 #           Corners             #
@@ -141,7 +142,7 @@ rounded-corners-exclude = [
 blur-method = "dual_kawase"
 blur-size = 1
 blur-deviation = false
-blur-strength = 2
+blur-strength = 3
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
