--- a/i3/config
+++ b/i3/config
@@ -10,8 +10,8 @@
         set $background     --randomize ~/Pictures/wallpapers/*
         set $lockscreen     ~/Pictures/wallpapers/lockscreen.png
     # window appearance
-        set $font           Inconsolata Bold 11
-        set $title          [%title]
+        set $font           monospace 9
+        set $title          <span font='JetBrains Mono Light 9'>[%title]</span>
         set $border_px      1
     # window behaviour
         set $float_class    Pavucontrol|Gnome-tweaks|Lxappearance
@@ -45,6 +45,7 @@
         for_window [class=".*"] border pixel $border_px
         gaps inner 2
         gaps outer 1
+        hide_edge_borders vertical
     # behaviour
         smart_borders on
         floating_modifier $mod
@@ -77,10 +78,11 @@
 
 # workspaces
     # labels
-        set $ws0 "0:"
-        set $ws1 "1:"
-        set $ws2 "2:"
-        set $ws3 "3:"
+        set $ws0 "0:<span font='Font Awesome 6 Free Regular 11'></span>"
+        set $ws1 "1:<span font='Font Awesome 6 Free Regular 11'></span>"
+        set $ws2 "2:<span font='Font Awesome 6 Free Regular 11'></span>"
+        set $ws3 "3:<span font='Font Awesome 6 Free Regular 11'></span>"
+
     # keybindings
         # switch to workspace
             bindsym $mod+comma workspace prev
@@ -129,7 +131,7 @@
         client.urgent           $darkgreen  $green      $darkgreen
         client.placeholder      $black      $black      $darkgrey
         client.background       $black
-        
+
 # statusbar
     bar {
         status_command          i3blocks -c ~/.config/i3blocks/i3blocks.conf
@@ -137,7 +139,7 @@
         height                  30
         tray_padding            5
         workspace_min_width     75
-        separator_symbol        " « "
+        separator_symbol        "/"
         workspace_buttons       yes
         strip_workspace_numbers yes
         colors {
