--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -7,33 +7,22 @@ border_right=0
 border_bottom=0
 align=center
 
-#volume
+# VOLUME
 [left]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 [volume]
-align=right
 background=#383c45
 command=~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 100 --critical 120
 interval=once
-min_width="---------"
+min_width="----------"
 signal=1
-[microphone]
-background=#383c45
-command=echo "<span font='Font Awesome 6 Free Regular 10' color='#666666'></span>"
-interval=once
-min_width="----"
-[webcam]
-align=left
-background=#383c45
-command=echo "<span font='Font Awesome 6 Free Regular 10' color='#666666'></span>"
-interval=once
-min_width="----"
 [right]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 
-#wifi
+
+# WIFI
 [left]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
@@ -47,7 +36,8 @@ signal=3
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 
-#memory
+
+# MEMORY
 [left]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
@@ -60,7 +50,8 @@ min_width="---------"
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 
-#load
+
+# LOAD
 [left]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
@@ -73,7 +64,8 @@ min_width="---------"
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 
-# gpu
+
+# GPU
 [left]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
@@ -86,7 +78,60 @@ min_width="----------"
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 
-# time
+
+# BRIGHTNESS - TO DO
+[left]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
+[brightness]
+command=echo "0.9 <span font='Inconsolata Nerd Font 14' color='#a9a9a9'>󰖨</span> "
+interval=once
+min_width="----------"
+background=#383c45
+[right]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
+
+
+# DEVICES - TO DO
+[left]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
+[microphone]
+background=#383c45
+command=echo "<span font='Inconsolata Nerd Font 13' color='#666666'>󰍭</span>"
+interval=once
+min_width="----"
+[webcam]
+background=#383c45
+command=echo "<span font='Inconsolata Nerd Font 13' color='#666666'>󰕨</span>"
+interval=once
+min_width="---"
+[bluetooth]
+background=#383c45
+command=echo "<span font='Inconsolata Nerd Font 13' color='#666666'>󰂲</span>"
+interval=once
+min_width="----"
+[right]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
+
+
+# POWER - TO DO
+[left]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
+[power]
+full_text=<span font='Inconsolata Nerd Font 14' color='#a9a9a9'>󰚥</span>
+interval=none
+min_width="---"
+background=#383c45
+[right]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
+
+
+# TIME
 [left]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
@@ -99,7 +144,11 @@ min_width="-------------"
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 
+
+# POWERMENU
 [arch-logo]
-command=echo "<span font='Inconsolata Nerd Font 12' color='#ffffff'></span>"
-interval=once
+full_text="<span font='Inconsolata Nerd Font 12' color='#ffffff'></span>"
+command=sh -c /home/mishi/.config/scripts/tools/powermenu.sh
+interval=none
 min_width="---"
+
