--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -7,13 +7,14 @@ border_right=0
 border_bottom=0
 align=center
 
+
 # VOLUME
 [left]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 [volume]
 background=#383c45
-command=~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 100 --critical 120
+command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 100 --critical 120
 interval=once
 min_width="----------"
 signal=1
@@ -28,8 +29,8 @@ command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 [wifi]
 background=#383c45
-command=~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 40 --critical 20
-interval=30
+command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 40 --critical 20
+interval=10
 min_width="----------"
 signal=3
 [right]
@@ -43,7 +44,7 @@ command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 [memory]
 background=#383c45
-command=~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 70 --critical 90
+command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 70 --critical 90
 interval=30
 min_width="---------"
 [right]
@@ -57,7 +58,7 @@ command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 [load]
 background=#383c45
-command=~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 0.7 --critical 1.0
+command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 0.7 --critical 1.0
 interval=30
 min_width="---------"
 [right]
@@ -71,7 +72,7 @@ command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 [gpu]
 background=#383c45
-command=~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 70 --critical 80
+command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 70 --critical 80
 interval=30
 min_width="----------"
 [right]
@@ -80,55 +81,55 @@ interval=once
 
 
 # BRIGHTNESS - TO DO
-[left]
-command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
-interval=once
-[brightness]
-command=echo "0.9 <span font='Inconsolata Nerd Font 14' color='#a9a9a9'>󰖨</span> "
-interval=once
-min_width="----------"
-background=#383c45
-[right]
-command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
-interval=once
+#[left]
+#command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+#interval=once
+#[brightness]
+#command=echo "0.9 <span font='Inconsolata Nerd Font 14' color='#a9a9a9'>󰖨</span> "
+#interval=once
+#min_width="----------"
+#background=#383c45
+#[right]
+#command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+#interval=once
 
 
 # DEVICES - TO DO
-[left]
-command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
-interval=once
-[microphone]
-background=#383c45
-command=echo "<span font='Inconsolata Nerd Font 13' color='#666666'>󰍭</span>"
-interval=once
-min_width="----"
-[webcam]
-background=#383c45
-command=echo "<span font='Inconsolata Nerd Font 13' color='#666666'>󰕨</span>"
-interval=once
-min_width="---"
-[bluetooth]
-background=#383c45
-command=echo "<span font='Inconsolata Nerd Font 13' color='#666666'>󰂲</span>"
-interval=once
-min_width="----"
-[right]
-command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
-interval=once
+#[left]
+#command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+#interval=once
+#[microphone]
+#background=#383c45
+#command=echo "<span font='Inconsolata Nerd Font 13' color='#666666'>󰍭</span>"
+#interval=once
+#min_width="----"
+#[webcam]
+#background=#383c45
+#command=echo "<span font='Inconsolata Nerd Font 13' color='#666666'>󰕨</span>"
+#interval=once
+#min_width="---"
+#[bluetooth]
+#background=#383c45
+#command=echo "<span font='Inconsolata Nerd Font 13' color='#666666'>󰂲</span>"
+#interval=once
+#min_width="----"
+#[right]
+#command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+#interval=once
 
 
 # POWER - TO DO
-[left]
-command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
-interval=once
-[power]
-full_text=<span font='Inconsolata Nerd Font 14' color='#a9a9a9'>󰚥</span>
-interval=none
-min_width="---"
-background=#383c45
-[right]
-command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
-interval=once
+#[left]
+#command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+#interval=once
+#[power]
+#full_text=<span font='Inconsolata Nerd Font 14' color='#a9a9a9'>󰚥</span>
+#interval=none
+#min_width="---"
+#background=#383c45
+#[right]
+#command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+#interval=once
 
 
 # TIME
@@ -137,7 +138,7 @@ command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 [time]
 background=#383c45
-command=~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME
+command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME
 interval=10
 min_width="-------------"
 [right]
@@ -147,7 +148,7 @@ interval=once
 
 # POWERMENU
 [arch-logo]
-full_text="<span font='Inconsolata Nerd Font 12' color='#ffffff'></span>"
+full_text="<span font='Inconsolata Nerd Font 15' color='#ffffff'>󰣇 </span>"
 command=sh -c /home/mishi/.config/scripts/tools/powermenu.sh
 interval=none
 min_width="---"
