--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -116,7 +116,8 @@ inactive-dim = 0
 #
 
 opacity-rule = [ "100:class_g = 'Brave-browser'" ];
-opacity-rule = [ "50:class_g = 'notif-overlay'" ]
+opacity-rule = [ "50:class_g = 'notif-overlay'" ];
+#opacity-rule = [ "50:class_g = 'Alacritty'" ];
 
 #################################
 #           Corners             #
