--- a/i3/config
+++ b/i3/config
@@ -141,7 +141,7 @@
         height                  30
         tray_padding            4
         workspace_min_width     75
-        separator_symbol        "/"
+        separator_symbol        "󰄽"
         workspace_buttons       yes
         strip_workspace_numbers yes
         colors {
